Header z-index issue resolved

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -9,6 +9,7 @@
 
   background-color: #000;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  z-index: 9999;
 }
 
 .Logo {
